// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Form/Select SelectClassica 1`] = `
<div>
  <div
    class="select-wrapper"
  >
    <label
      for="example-reactstrap"
    >
      Etichetta di esempio
    </label>
    <select
      id="example-reactstrap"
    >
      <option
        value=""
      >
        Scegli un'opzione
      </option>
      <option
        value="Value 1"
      >
        Lorem ipsum dolor sit amet
      </option>
      <option
        value="Value 2"
      >
        Duis vestibulum eleifend libero
      </option>
      <option
        value="Value 3"
      >
        Phasellus pretium orci sed odio tempus
      </option>
      <option
        value="Value 4"
      >
        Vestibulum bibendum ex vel augue porttitor sodales
      </option>
      <option
        value="Value 5"
      >
        Praesent quis elementum turpis
      </option>
    </select>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Form/Select SelectConGruppi 1`] = `
<div>
  <div
    class="select-wrapper"
  >
    <label
      for="example-reactstrap"
    >
      Etichetta di esempio
    </label>
    <select
      id="example-reactstrap"
    >
      <option
        value=""
      >
        Scegli un'opzione
      </option>
      <optgroup
        label="Gruppo 1"
      >
        <option
          value="Value 1"
        >
          Lorem ipsum dolor sit amet
        </option>
        <option
          value="Value 2"
        >
          Duis vestibulum eleifend libero
        </option>
        <option
          value="Value 3"
        >
          Phasellus pretium orci sed odio tempus
        </option>
      </optgroup>
      <optgroup
        label="Gruppo 2"
      >
        <option
          value="Value 4"
        >
          Vestibulum bibendum ex vel augue porttitor sodales
        </option>
        <option
          value="Value 5"
        >
          Praesent quis elementum turpis
        </option>
      </optgroup>
    </select>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Form/Select SelectDisabilitata 1`] = `
<div>
  <div
    class="select-wrapper"
  >
    <label
      for="example-reactstrap"
    >
      Etichetta di esempio
    </label>
    <select
      disabled=""
      id="example-reactstrap"
    >
      <option
        value=""
      >
        Scegli un'opzione
      </option>
      <option
        value="Value 1"
      >
        Lorem ipsum dolor sit amet
      </option>
      <option
        value="Value 2"
      >
        Duis vestibulum eleifend libero
      </option>
      <option
        value="Value 3"
      >
        Phasellus pretium orci sed odio tempus
      </option>
      <option
        value="Value 4"
      >
        Vestibulum bibendum ex vel augue porttitor sodales
      </option>
      <option
        value="Value 5"
      >
        Praesent quis elementum turpis
      </option>
    </select>
  </div>
</div>
`;
